// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomeButton > when collapsed (isCollapsed: true) > renders correctly in dark theme 1`] = `
<div>
  <div
    class="css-1jc2zkj"
    data-testid="home-button"
    role="button"
  >
    <div
      class="css-axw7ok"
    >
      <div
        class="css-4dcg29"
        data-testid="icon-home"
        role="button"
        size="3"
      >
        <svg
          data-testid="home-icon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HomeButton > when collapsed (isCollapsed: true) > renders correctly in light theme 1`] = `
<div>
  <div
    class="css-1jc2zkj"
    data-testid="home-button"
    role="button"
  >
    <div
      class="css-axw7ok"
    >
      <div
        class="css-4dcg29"
        data-testid="icon-home"
        role="button"
        size="3"
      >
        <svg
          data-testid="home-icon"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`HomeButton > when expanded (isCollapsed: false) > renders correctly in dark theme 1`] = `
<div>
  <div
    class="css-1jc2zkj"
    data-testid="home-button"
    role="button"
  >
    <div
      class="css-axw7ok"
    >
      <div
        class="css-4dcg29"
        data-testid="icon-home"
        role="button"
        size="3"
      >
        <svg
          data-testid="home-icon"
        />
      </div>
      <h6
        css="[object Object]"
      >
        Home
      </h6>
    </div>
  </div>
</div>
`;

exports[`HomeButton > when expanded (isCollapsed: false) > renders correctly in light theme 1`] = `
<div>
  <div
    class="css-1jc2zkj"
    data-testid="home-button"
    role="button"
  >
    <div
      class="css-axw7ok"
    >
      <div
        class="css-4dcg29"
        data-testid="icon-home"
        role="button"
        size="3"
      >
        <svg
          data-testid="home-icon"
        />
      </div>
      <h6
        css="[object Object]"
      >
        Home
      </h6>
    </div>
  </div>
</div>
`;
